@@ -1,14 +1,14 @@
 CREATE TABLE IF NOT EXISTS role (
   id INTEGER PRIMARY KEY AUTOINCREMENT,
-  name varchar(100) NOT NULL
+  name VARCHAR(100) NOT NULL
 );
 
 CREATE UNIQUE INDEX role_index on role(name);
 
 CREATE TABLE IF NOT EXISTS privilege (
   id INTEGER PRIMARY KEY AUTOINCREMENT,
-  name varchar(20) NOT NULL,
-  role_id int NOT NULL,
+  name VARCHAR(20) NOT NULL,
+  role_id INTEGER NOT NULL,
   FOREIGN KEY (role_id) 
   	REFERENCES role (id)
   	ON DELETE CASCADE
@@ -19,10 +19,10 @@ CREATE UNIQUE INDEX privilege_index on privilege(name, role_id);
 
 CREATE TABLE IF NOT EXISTS user_group (
   id INTEGER PRIMARY KEY AUTOINCREMENT,
-  name varchar(100) NOT NULL,
-  status varchar(100) NOT NULL,
-  created_by varchar(100) NOT NULL,
-  deleted_by varchar(100) DEFAULT NULL
+  name VARCHAR(100) NOT NULL,
+  status VARCHAR(100) NOT NULL,
+  created_by VARCHAR(100) NOT NULL,
+  deleted_by VARCHAR(100) DEFAULT NULL
 );
 
 CREATE INDEX user_group_index ON user_group(status);
@@ -30,11 +30,11 @@ CREATE INDEX user_group_index ON user_group(status);
 
 CREATE TABLE IF NOT EXISTS user_group_member (
   id INTEGER PRIMARY KEY AUTOINCREMENT,
-  user_id varchar(100) NOT NULL,
-  group_id int(11) NOT NULL,
-  status varchar(100) NOT NULL,
-  created_by varchar(100) NOT NULL,
-  deleted_by varchar(100) DEFAULT NULL,
+  user_id VARCHAR(100) NOT NULL,
+  group_id INTEGER NOT NULL,
+  status VARCHAR(100) NOT NULL,
+  created_by VARCHAR(100) NOT NULL,
+  deleted_by VARCHAR(100) DEFAULT NULL,
 -- interprets now as localtime and save it as UTC
   status_date timestamp DEFAULT (datetime('now','localtime')),
   FOREIGN KEY (group_id) 
@@ -49,8 +49,8 @@ CREATE INDEX user_group_member_status_index
 
 CREATE TABLE IF NOT EXISTS group_member_role (
   id INTEGER PRIMARY KEY AUTOINCREMENT,
-  group_member_id int(11) NOT NULL,
-  role_id varchar(100) NOT NULL,
+  group_member_id INTEGER NOT NULL,
+  role_id INTEGER NOT NULL,
   FOREIGN KEY (group_member_id)
   	REFERENCES user_group_member (id)
   	ON DELETE CASCADE,
@@ -65,14 +65,14 @@ CREATE UNIQUE INDEX group_member_role_index
 
 CREATE TABLE IF NOT EXISTS virtual_corpus (
   id INTEGER PRIMARY KEY AUTOINCREMENT,
-  name varchar(255) NOT NULL,
-  type varchar(100) NOT NULL,
-  required_access varchar(100) NOT NULL,
-  created_by varchar(100) NOT NULL,
-  description varchar(255) DEFAULT NULL,
-  status varchar(100) DEFAULT NULL,
+  name VARCHAR(255) NOT NULL,
+  type VARCHAR(100) NOT NULL,
+  required_access VARCHAR(100) NOT NULL,
+  created_by VARCHAR(100) NOT NULL,
+  description VARCHAR(255) DEFAULT NULL,
+  status VARCHAR(100) DEFAULT NULL,
   corpus_query TEXT NOT NULL,
-  definition varchar(255) DEFAULT NULL
+  definition VARCHAR(255) DEFAULT NULL
 );
 
 CREATE INDEX virtual_corpus_owner_index ON virtual_corpus(created_by);
@@ -80,12 +80,12 @@ CREATE INDEX virtual_corpus_type_index ON virtual_corpus(type);
 
 CREATE TABLE IF NOT EXISTS virtual_corpus_access (
   id INTEGER PRIMARY KEY AUTOINCREMENT,
-  virtual_corpus_id int(11) NOT NULL,
-  user_group_id int(11) NOT NULL,
-  status varchar(100) NOT NULL,
-  created_by varchar(100) NOT NULL,
-  approved_by varchar(100) DEFAULT NULL,
-  deleted_by varchar(100) DEFAULT NULL,
+  virtual_corpus_id INTEGER NOT NULL,
+  user_group_id INTEGER NOT NULL,
+  status VARCHAR(100) NOT NULL,
+  created_by VARCHAR(100) NOT NULL,
+  approved_by VARCHAR(100) DEFAULT NULL,
+  deleted_by VARCHAR(100) DEFAULT NULL,
   FOREIGN KEY (user_group_id) 
   	REFERENCES user_group (id)
   	ON DELETE CASCADE,
