@@ -1,5 +1,5 @@
 CREATE TABLE IF NOT EXISTS admin(
-	id INTEGER PRIMARY KEY AUTOINCREMENT,
+	id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL,
 	user_id varchar(100) NOT NULL
 );
 
