@@ -1,13 +1,17 @@
 package de.ids_mannheim.korap.config;
 
+import java.io.IOException;
 import java.util.concurrent.ThreadLocalRandom;
 
 import org.junit.runner.RunWith;
+import org.springframework.beans.BeansException;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.ApplicationContext;
+import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
+import org.springframework.beans.factory.support.DefaultListableBeanFactory;
+import org.springframework.context.support.GenericApplicationContext;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
-import org.springframework.web.context.WebApplicationContext;
+import org.springframework.web.context.support.AbstractRefreshableWebApplicationContext;
 
 import com.sun.jersey.spi.spring.container.servlet.SpringServlet;
 import com.sun.jersey.test.framework.AppDescriptor;
@@ -22,7 +26,7 @@ import com.sun.jersey.test.framework.spi.container.grizzly.web.GrizzlyWebTestCon
 public abstract class SpringJerseyTest extends JerseyTest {
 
     @Autowired
-    protected ApplicationContext applicationContext;
+    protected GenericApplicationContext applicationContext;
 
     private static String[] classPackages =
             new String[] { "de.ids_mannheim.korap.web.controller",
@@ -37,16 +41,39 @@ public abstract class SpringJerseyTest extends JerseyTest {
     }
 
     @Override
-    protected AppDescriptor configure () {
+    public void setUp () throws Exception {
 
         StaticContextLoaderListener.applicationContext =
-                (WebApplicationContext) applicationContext;
+                new AbstractRefreshableWebApplicationContext() {
 
+                    ConfigurableListableBeanFactory existingBeanFactory =
+                            applicationContext.getBeanFactory();
+
+                    @Override
+                    protected void loadBeanDefinitions (
+                            DefaultListableBeanFactory beanFactory)
+                            throws BeansException, IOException {
+
+                        String[] beanDefinitionNames =
+                                existingBeanFactory.getBeanDefinitionNames();
+                        for (String beanName : beanDefinitionNames) {
+                            beanFactory.registerBeanDefinition(beanName,
+                                    existingBeanFactory
+                                            .getBeanDefinition(beanName));
+                        }
+                    }
+                };
+
+        super.setUp();
+    }
+
+    @Override
+    protected AppDescriptor configure () {
         return new WebAppDescriptor.Builder(classPackages)
                 .servletClass(SpringServlet.class)
                 .contextListenerClass(StaticContextLoaderListener.class)
-                .contextParam("contextConfigLocation",
-                        "classpath:test-config.xml")
+                //                .contextParam("contextConfigLocation",
+                //                        "classpath:test-config.xml")
                 .build();
     }
 
